
Tools:
* bdeinfo
  - print more metadata ?
* bdeexport
  - create tool to export decrypted BDE volume to RAW file?
* bdemount
  - implement native MacOS-X version

Format:
* validation
* TPM encoded VMK ?
* VMK date time - change password on USB encrypted drive
* what is entry type 0x000b ?
* why does Windows hide the last 4096 bytes of the volume?

20150124
* applied updates

20150106
* 2015 update

20141226
* changes for updated dependencies

20141222
* worked on Python 3 support
* worked on tests

20141205
* worked on test scripts
* worked on thread-safety

20141130
* code clean up

20141120
* code clean up
* removed libbde_volume_read_random
* fixed pybde open close test
* pybde added get encryption method functionality

20141028
* changes for deployment
* bug fix in Python-bindings

20141023
* changes for deployment

20141017
* changes for deployment

20141013
* worked on utility scripts

20140928
* removed README.macosx
* changes for project site move
* updated utility scripts
* updates for latest libfdata

20140731
* bug fix in Python bindings

20140728
* small change in bdemount for Dokan support

20140727
* updated dependencies
* updated msvscpp files
* fixes for FreeBSD 8 compilation
* worked on bdemount

20140629
* small improvements to error reporting
* compression method is now forced to effective 16-bits

20140607
* worked on tests
* updated msvscpp files

20140531
* updated dependencies
* worked on Python bindings
* added is locked function

20140405
* worked on setup.py

20140404
* worked on tests

20140403
* worked on exposing metadata
* worked on Python bindings

20140401
* worked on exposing metadata
* worked on Python bindings

20140331
* worked on exposing metadata

20140330
* worked on Python bindings
* worked on tests
* moved password hashes to password keep

20140112
* 2014 update
* updated dependencies

20131211
* worked on Python bindings
* worked on exposing metadata via bdeinfo
* updated msvscpp files

20131205
* updated dependencies
